--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>雲林小農快速連結</title>
+  <title>玉農-雲林小農</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
 </head>
 <body>
   <header>
-    <h1>雲林小農快速連結</h1>
+    <h1>玉農-雲林小農</h1>
   </header>
   <nav id="siteList">
     <!-- 網站清單將透過 JavaScript 動態生成 -->
