--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       const websites = [
         { name: 'Facebook', url: 'https://www.facebook.com/profile.php?id=61554014491261&mibextid=LQQJ4d' },
         { name: 'Line', url: 'https://lin.ee/3Wp8svO' },
+        { name: '臺灣農產生產追溯', url: 'https://qrc.afa.gov.tw/blog/1201006543'},
         { name: '官網', url: '#'},
       ];
 
