--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       cursor: pointer;
       transition: background-color 0.3s;
       margin-bottom: 0.5em;
+      font-size: 1.5em; /* 預設文字大小 */
     }
 
     button span {
@@ -48,6 +49,7 @@
     @media (max-width: 600px) {
       button {
         width: 100%;
+        font-size: 2.0em; /* 調整文字大小 */
       }
     }
   </style>
